--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -26,7 +26,7 @@ repos:
     language_version: python3
     exclude: "Python/Projects/Boilerplate"
 - repo: https://github.com/astral-sh/ruff-pre-commit
-  rev: v0.2.2
+  rev: v0.14.6
   hooks:
   - id: ruff-format
     args:
@@ -54,17 +54,17 @@ repos:
 #   - id: flake8
 #     args:
 #     - --max-line-length=88
-- repo: https://github.com/pre-commit/mirrors-mypy
-  rev: v1.8.0
-  hooks:
-  - id: mypy
-    args:
-    - --config-file=dev/mypy.ini
-    # - --no-strict-optional
-    # - --ignore-missing-imports
-    # - --namespace-packages
-    # - --explicit-package-bases
-    additional_dependencies: [types-all]
+# - repo: https://github.com/pre-commit/mirrors-mypy
+#   rev: v1.8.0
+#   hooks:
+#   - id: mypy
+#     args:
+#     - --config-file=dev/mypy.ini
+#     - --no-strict-optional
+#     - --ignore-missing-imports
+#     - --namespace-packages
+#     - --explicit-package-bases
+#     additional_dependencies: [types-all]
 # - repo: https://github.com/pre-commit/mirrors-pylint
 #   rev: v3.0.0a5
 #   hooks:
