Update Makefile template, update the OCR tool

--- a/Python/Tool/ocr/Makefile
+++ b/Python/Tool/ocr/Makefile
@@ -7,6 +7,10 @@ start:
 run:
 	docker exec -it $(CONTAINER) bash
 
+scan-image:
+	cp ~/Downloads/_question.png images/question.png
+	docker exec -it $(CONTAINER) python -m src
+
 stop:
 	docker-compose stop
 	echo y | docker system prune
